Added address mapping function

--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -19,7 +19,8 @@
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import urllib.robotparser\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
@@ -254,20 +255,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "db954734",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def map_wallet_addresses(wallet_addresses, mapping_df):\n",
+    "    \"\"\"\n",
+    "    Mappa una lista di wallet addresses ai rispettivi addressId nel dataset di mapping.\n",
+    "    Restituisce un set di addressId trovati e stampa eventuali indirizzi non trovati.\n",
+    "    \"\"\"\n",
+    "    mapped_addresses = set()\n",
+    "    for address in wallet_addresses:\n",
+    "        row = mapping_df[mapping_df['hash'] == address]\n",
+    "        if not row.empty:\n",
+    "            mapped_addresses.add(row['address'].values[0])\n",
+    "        else:\n",
+    "            print(f\"No mapping found for address: {address}\")\n",
+    "    print(f\"Mapped addresses : {mapped_addresses}\")\n",
+    "    return mapped_addresses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "724bd3fc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mapped addresses for DeepBit.net: {np.int64(2536929), np.int64(2537090)}\n"
+      "Mapped addresses : {np.int64(2536929), np.int64(2537090)}\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "#1) Identify the mapping between wallet addresses on the dataset\n",
     "mapping = pd.read_csv('mapping.csv', engine='pyarrow', header=None)\n",
     "mapping.columns = ['hash', 'address']\n",
