Started gambling service analisys

--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "BASE_URL = \"https://www.walletexplorer.com\"\n",
     "HEADERS = {\n",
-    "    'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36',\n",
+    "    'User-Agent': 'Mozilla/5.0 AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36',\n",
     "    'Accept-Language': 'it-IT,it;q=0.9,en-US;q=0.8,en;q=0.7',\n",
     "    'Content-Type': 'application/x-www-form-urlencoded',\n",
     "    'Referer': BASE_URL\n",
@@ -57,18 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "7584e53a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "robots.txt could not be read or is not present.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "# Function to check if a URL is allowed by robots.txt\n",
@@ -108,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "bdaf0fe0",
    "metadata": {},
    "outputs": [],
@@ -116,7 +108,7 @@
     "def get_walletexplorer_page():\n",
     "    ''' Scrape the main page of WalletExplorer to find the search form '''\n",
     "    try:\n",
-    "        main_walletexplore_page = requests.get(BASE_URL, headers=HEADERS,timeout=60)\n",
+    "        main_walletexplore_page = requests.get(BASE_URL, headers=HEADERS)\n",
     "        main_walletexplore_page.raise_for_status()\n",
     "        print(\"WalletExplorer has been successfully accessed\")\n",
     "    except requests.exceptions.RequestException as e:\n",
@@ -127,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3ce59b3e",
    "metadata": {},
    "outputs": [],
@@ -145,7 +137,7 @@
     "\n",
     "    # Open search page regarding 'service_name' and open the wallet addresses page\n",
     "    try: \n",
-    "        search_page = requests.get(target_url, headers=HEADERS, params={'wallet' :service_name},timeout=60)\n",
+    "        search_page = requests.get(target_url, headers=HEADERS, params={'wallet' :service_name})\n",
     "        search_page.raise_for_status()\n",
     "        print(f'Search page for \"{service_name}\" has been successfully accessed')\n",
     "    except requests.exceptions.RequestException as e:\n",
@@ -162,7 +154,7 @@
     "    wallet_link = span.find('a').get('href')\n",
     "    wallets_url = BASE_URL + wallet_link # create the full URL for the wallet addresses page\n",
     "    try:\n",
-    "        wallet_addr_page = requests.get(wallets_url, headers=HEADERS,timeout=60)\n",
+    "        wallet_addr_page = requests.get(wallets_url, headers=HEADERS)\n",
     "        wallet_addr_page.raise_for_status()\n",
     "    except requests.exceptions.RequestException as e:\n",
     "        print(f\"Error while accessing the wallets page: {e}\")\n",
@@ -190,21 +182,7 @@
    "execution_count": null,
    "id": "3abacc96",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WalletExplorer has been successfully accessed\n",
-      "Searching for wallet addresses of DeepBit.net...\n",
-      "Search page for \"DeepBit.net\" has been successfully accessed\n",
-      "Searching for wallet addresses of DiceOnCrack.com...\n",
-      "Error while accessing the search page: ('Connection aborted.', ConnectionResetError(10054, 'An existing connection was forcibly closed by the remote host', None, 10054, None))\n",
-      "DeepBit.net wallet addresses: ['1VayNert3x1KzbpzMGt2qdqrAThiRovi8', '13NGmRF2SVRg3aKdGNVhXLmhA1JT9p87a8']\n",
-      "DiceOnCrack.com wallet addresses: None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "deepbit_service = \"DeepBit.net\"\n",
     "diceoncrack_service = \"DiceOnCrack.com\"\n",
@@ -255,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "db954734",
    "metadata": {},
    "outputs": [],
@@ -279,18 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "724bd3fc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mapped addresses : {np.int64(2536929), np.int64(2537090)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#1) Identify the mapping between wallet addresses on the dataset\n",
     "mapping = pd.read_csv('mapping.csv', engine='pyarrow', header=None)\n",
@@ -300,19 +270,9 @@
     "    print(\"Failed to retrieve the mapping dataset.\")\n",
     "    exit(1)\n",
     "\n",
-    "deepbit_mapped_addresses = set()\n",
+    "deepbit_wallet_addresses = [\"1VayNert3x1KzbpzMGt2qdqrAThiRovi8\",\"13NGmRF2SVRg3aKdGNVhXLmhA1JT9p87a8\"]\n",
     "\n",
-    "# Iterate through the wallet addresses and print the corresponding mapping\n",
-    "for address in deepbit_wallet_addresses:\n",
-    "    row = mapping[mapping['hash'] == address]\n",
-    "    if not row.empty:\n",
-    "        deepbit_mapped_addresses.add(row['address'].values[0])\n",
-    "    else:\n",
-    "        print(f\"No mapping found for address: {address}\")\n",
-    "\n",
-    "# Print the mapped addresses\n",
-    "print(f\"Mapped addresses for DeepBit.net: {deepbit_mapped_addresses}\")\n",
-    "\n"
+    "deepbit_mapped_addresses = map_wallet_addresses(deepbit_wallet_addresses, mapping)\n"
    ]
   },
   {
@@ -320,173 +280,7 @@
    "execution_count": null,
    "id": "1ae865e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Numero di transazioni Deepbit individuate: 15648\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>coinbaseTx</th>\n",
-       "      <th>deepbitSpendTx</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3171177</th>\n",
-       "      <td>1878755</td>\n",
-       "      <td>1882617</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3171330</th>\n",
-       "      <td>1878900</td>\n",
-       "      <td>1882704</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3171817</th>\n",
-       "      <td>1879037</td>\n",
-       "      <td>1882913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3171931</th>\n",
-       "      <td>1879137</td>\n",
-       "      <td>1882982</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3172084</th>\n",
-       "      <td>1879201</td>\n",
-       "      <td>1883074</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3172188</th>\n",
-       "      <td>1879256</td>\n",
-       "      <td>1883123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3172251</th>\n",
-       "      <td>1879372</td>\n",
-       "      <td>1883160</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173128</th>\n",
-       "      <td>1879674</td>\n",
-       "      <td>1883599</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173170</th>\n",
-       "      <td>1879778</td>\n",
-       "      <td>1883633</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173335</th>\n",
-       "      <td>1879896</td>\n",
-       "      <td>1883718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173336</th>\n",
-       "      <td>1879913</td>\n",
-       "      <td>1883718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173469</th>\n",
-       "      <td>1879960</td>\n",
-       "      <td>1883820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173470</th>\n",
-       "      <td>1880022</td>\n",
-       "      <td>1883820</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173675</th>\n",
-       "      <td>1880283</td>\n",
-       "      <td>1883936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173886</th>\n",
-       "      <td>1880340</td>\n",
-       "      <td>1884089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3173887</th>\n",
-       "      <td>1880168</td>\n",
-       "      <td>1884089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3174041</th>\n",
-       "      <td>1880291</td>\n",
-       "      <td>1884195</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3174042</th>\n",
-       "      <td>1880333</td>\n",
-       "      <td>1884196</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3174043</th>\n",
-       "      <td>1880362</td>\n",
-       "      <td>1884197</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3174559</th>\n",
-       "      <td>1880532</td>\n",
-       "      <td>1884440</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         coinbaseTx  deepbitSpendTx\n",
-       "3171177     1878755         1882617\n",
-       "3171330     1878900         1882704\n",
-       "3171817     1879037         1882913\n",
-       "3171931     1879137         1882982\n",
-       "3172084     1879201         1883074\n",
-       "3172188     1879256         1883123\n",
-       "3172251     1879372         1883160\n",
-       "3173128     1879674         1883599\n",
-       "3173170     1879778         1883633\n",
-       "3173335     1879896         1883718\n",
-       "3173336     1879913         1883718\n",
-       "3173469     1879960         1883820\n",
-       "3173470     1880022         1883820\n",
-       "3173675     1880283         1883936\n",
-       "3173886     1880340         1884089\n",
-       "3173887     1880168         1884089\n",
-       "3174041     1880291         1884195\n",
-       "3174042     1880333         1884196\n",
-       "3174043     1880362         1884197\n",
-       "3174559     1880532         1884440"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#2) Find the transaction patterns for the wallet addresses\n",
     "\n",
@@ -541,10 +335,204 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "403145c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Lets prepare the data for Deepbit.net block distribution\n",
+    "\n",
+    "deepbit_mined_blocks_df = transactions[transactions['txId'].isin(result['coinbaseTx'])].copy()\n",
+    "\n",
+    "# Assumendo che 'deepbit_mined_blocks_df' abbia una colonna 'timestamp' già convertita in datetime\n",
+    "deepbit_mined_blocks_df['timestamp'] = pd.to_datetime(deepbit_mined_blocks_df['timestamp'], unit='s')\n",
+    "deepbit_mined_blocks_df.set_index('timestamp', inplace=True)\n",
+    "\n",
+    "# 1. Conteggio giornaliero\n",
+    "daily = deepbit_mined_blocks_df.resample('D').size()\n",
+    "\n",
+    "# 2. Conteggio settimanale\n",
+    "weekly = deepbit_mined_blocks_df.resample('W').size()\n",
+    "\n",
+    "# 3. Conteggio mensile\n",
+    "monthly = deepbit_mined_blocks_df.resample('ME').size()\n",
+    "\n",
+    "# Visualizzazione\n",
+    "\n",
+    "fig, axs = plt.subplots(3, 1, figsize=(14, 12), sharex=False)\n",
+    "fig.suptitle('Distribuzione dei blocchi minati da Deepbit.net', fontsize=16)\n",
+    "\n",
+    "axs[0].plot(daily.index, daily.values, label='Giornaliero', color='blue')\n",
+    "axs[0].set_title('Blocchi minati - Giornaliero')\n",
+    "axs[0].set_ylabel('Blocchi')\n",
+    "axs[0].grid(True, alpha=0.3)\n",
+    "\n",
+    "axs[1].plot(weekly.index, weekly.values, label='Settimanale', color='green')\n",
+    "axs[1].set_title('Blocchi minati - Settimanale')\n",
+    "axs[1].set_ylabel('Blocchi')\n",
+    "axs[1].grid(True, alpha=0.3)\n",
+    "\n",
+    "axs[2].plot(monthly.index, monthly.values, label='Mensile', color='orange')\n",
+    "axs[2].set_title('Blocchi minati - Mensile')\n",
+    "axs[2].set_ylabel('Blocchi')\n",
+    "axs[2].set_xlabel('Data')\n",
+    "axs[2].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout(rect=[0, 0, 1, 0.97])\n",
+    "plt.show()\n",
+    "# ...existing code...\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "642a844d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Supponiamo che 'result' contenga le coinbaseTx di Deepbit.net (come già ottenuto nel tuo notebook)\n",
+    "# E che 'transactions' sia il DataFrame delle transazioni con le colonne ['timestamp', 'blockId', 'txId', 'isCoinbase', 'fee']\n",
+    "\n",
+    "#Lets prepare the data for Deepbit.net fee distribution\n",
+    "# 1. Estrai le transazioni coinbase di Deepbit.net\n",
+    "deepbit_coinbase_txs = transactions[transactions['txId'].isin(result['coinbaseTx'])].copy()\n",
+    "print(f\"Number of Deepbit.net coinbase transactions: {deepbit_coinbase_txs.columns}\")\n",
+    "# 2. Converte il timestamp in datetime\n",
+    "deepbit_coinbase_txs['datetime'] = pd.to_datetime(deepbit_coinbase_txs['timestamp'], unit='s')\n",
+    "print(deepbit_coinbase_txs.head(20))\n",
+    "\n",
+    "a = deepbit_coinbase_txs[ deepbit_coinbase_txs['fee'] > 0 ]\n",
+    "\n",
+    "print(f\"Number of Deepbit.net coinbase transactions with fee > 0: {len(a)}\")\n",
+    "\n",
+    "total_fee = deepbit_coinbase_txs['fee'].sum()\n",
+    "print(f\"Total fee collected by Deepbit.net: {total_fee} satoshis\")\n",
+    "\n",
+    "fee_per_block = deepbit_coinbase_txs.groupby('blockId')['fee'].sum()\n",
+    "\n",
+    "fee_per_block.head(20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fe8ce2ae",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d24b603",
+   "metadata": {},
+   "source": [
+    "## DiceOnCrack.com gambling service analysis\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b516648e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4717a898",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "diceoncrack_wallet_addresses = [\n",
+    "    \"12TaAbLWBNKB1NLYH92CPnC1DizQoNK6FN\",\n",
+    "    \"1CRACkbiJSxfDaLNEoaNsHjNtU4KttwHyo\",\n",
+    "    \"1CRACKafkXsQzUYmu2fUM3j9c2y4yDhvfh\",\n",
+    "    \"1CRACKLiwFrZbAQz1yb9w22onHCMLbiMTY\",\n",
+    "    \"12tAabLFLxvUzC5KuX7VKMM8bYRncbQ84E\",\n",
+    "    \"1CrAcKt3HE8LNsx4KKDvjqLvcr373wg5ke\",\n",
+    "    \"1AVFypuG2jUrYzjZa69C7hK59XkWUwvK1m\",\n",
+    "    \"1CRACK25QvpVdcEmPZVD5ixtf99cMF9stg\",\n",
+    "    \"1CracksLRtQMcTF4HXNrvPzRgvz7Qr6wNd\",\n",
+    "    \"13TAabLHjNzwg8Mj7XYn76FuVAqj32s8EM\",\n",
+    "    \"1CrAckQppdcfiiw4XzpsKrZrf9eDvUok9C\",\n",
+    "    \"19TAABLQTLxgWHTdm7yNJNstgeQFgxTP4f\",\n",
+    "    \"14TAAbLiw2QLuRJCGQ3iETYg3vcpweZkTE\",\n",
+    "    \"15TaABLmhxiRQ9DTX6ZcZ9S9RknVZmP5jX\",\n",
+    "    \"1tAabLBcZLVL7md9nAnvGMCYdbvq4UVZV\",\n",
+    "    \"1PipEaL8yRS8n93mUS16wT5SNDiMrMutv5\",\n",
+    "    \"1PipemCUjxq9LKww7CaLWUMeGVZL3bD3VM\",\n",
+    "    \"1LQXotaEjfmerkwrGB3dHnheujo7sng6vA\",\n",
+    "    \"1PipeBMryPGnN3Ms3HfnNjetCS4THmkpkS\",\n",
+    "    \"1PipeZHgQXcjAYsUQ4WRXyKZn1X3sJNrpk\",\n",
+    "    \"1PipePezjvE7vBukPyDUkhHEF54qK1nkeu\",\n",
+    "    \"1Q44t4knYY3PsQZUFAejhd7Wot79ecHe8e\",\n",
+    "    \"1F4VXTQRzVQfLaGEWcf697xj1g2cKqPire\",\n",
+    "    \"1Pipeb5iNYmURifrxPZfvwHsTiw9rEb2iu\",\n",
+    "    \"1PipeZofhJv1hxsxCadEeG1vHAK87f23LE\",\n",
+    "    \"17ZmFwCULT44K25kWDeYbHiGaJCrWtytjx\",\n",
+    "    \"13encD1Yagh8M6a9Wgb3YJxKHrHqXnYi8y\",\n",
+    "    \"1GD2EiVa1rbbXcmFceyM47YN16fzVwn9j\"\n",
+    "]\n",
+    "\n",
+    "\n",
+    "diceoncrack_mapped_addresses = map_wallet_addresses(diceoncrack_wallet_addresses, mapping)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc6a5db6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find the transaction of DiceOnCrack.com\n",
+    "# which are the transactions that have at least one input or output address of DiceOnCrack.com\n",
+    "def find_diceoncrack_transactions(diceoncrack_mapped_addresses, transactions, inputs, outputs):\n",
+    "    \"\"\"Finds all transactions related to DiceOnCrack.com addresses.\"\"\"\n",
+    "    \n",
+    "    # Find all outputs related to DiceOnCrack addresses\n",
+    "    diceoncrack_outputs = outputs[outputs['addressId'].isin(diceoncrack_mapped_addresses)]\n",
+    "    \n",
+    "    # Find all inputs related to DiceOnCrack addresses\n",
+    "    diceoncrack_inputs = inputs[inputs['addressId'].isin(diceoncrack_mapped_addresses)]\n",
+    "    \n",
+    "    # Combine both outputs and inputs to get unique transaction IDs\n",
+    "    diceoncrack_tx_ids = set(diceoncrack_outputs['txId']).union(set(diceoncrack_inputs['txId']))\n",
+    "    \n",
+    "    # Filter transactions based on these IDs\n",
+    "    diceoncrack_transactions = transactions[transactions['txId'].isin(diceoncrack_tx_ids)]\n",
+    "    # Order by blockId in ascending manner\n",
+    "    diceoncrack_transactions = diceoncrack_transactions.sort_values(by='blockId', ascending=True)\n",
+    "    \n",
+    "    return diceoncrack_transactions\n",
+    "\n",
+    "# Find the transactions related to DiceOnCrack.com\n",
+    "diceoncrack_transactions = find_diceoncrack_transactions(diceoncrack_mapped_addresses, transactions, inputs, outputs)\n",
+    "print(f\"Number of transactions related to DiceOnCrack.com: {len(diceoncrack_transactions)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96ea309c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Considering the transactions related to DiceOnCrack.com done started from 1/09/2012 and identify the group of transactions that have the same blockId\n",
+    "def group_diceoncrack_transactions_by_block(diceoncrack_transactions):\n",
+    "    \"\"\"Groups DiceOnCrack.com transactions by blockId.\"\"\"\n",
+    "    \n",
+    "    # Group by blockId and aggregate transactions\n",
+    "    grouped_transactions = diceoncrack_transactions.groupby('blockId').agg({\n",
+    "        'txId': 'count',  # Count of transactions in each block\n",
+    "        'timestamp': 'first'  # First timestamp in each block\n",
+    "    }).reset_index()\n",
+    "    \n",
+    "    grouped_transactions.rename(columns={'txId': 'transaction_count'}, inplace=True)\n",
+    "    \n",
+    "    return grouped_transactions\n"
+   ]
   }
  ],
  "metadata": {
