--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c0471610",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "be65d552",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7584e53a",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bdaf0fe0",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3ce59b3e",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3abacc96",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "db954734",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "724bd3fc",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1ae865e5",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "3174559     1880532         1884440"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "403145c6",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "642a844d",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "Name: fee, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "fe8ce2ae",
    "metadata": {},
    "outputs": [],
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "4717a898",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "fc6a5db6",
    "metadata": {},
    "outputs": [
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "96ea309c",
    "metadata": {},
    "outputs": [],
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "a5083dda",
    "metadata": {},
    "outputs": [],
@@ -1052,10 +1052,6 @@
     "        # get_wallet_hash.last_request_time = time.time()\n",
     "\n",
     "def cluster_by_wallet(group_info, diceoncrack_wallet_ids):\n",
-    "    \"\"\"\n",
-    "    Crea cluster di transazioni omogenee per wallet di input\n",
-    "    utilizzando operazioni vettoriali di pandas\n",
-    "    \"\"\"\n",
     "\n",
     "    grouped_infor_by_txid = group_info.groupby('txId')\n",
     "\n",
@@ -1102,8 +1098,12 @@
     "                'wallet': cluster_wallet,\n",
     "                'num_addresses': len(input_address)})\n",
     "\n",
+    "    \n",
     "    # Convert the list of dictionaries to a DataFrame\n",
-    "    cluster_wallets = pd.DataFrame(cluster_info, columns=['txId', 'wallet','num_addresses'])\n",
+    "    cluster_wallets = pd.DataFrame(cluster_info, columns=['txId', 'wallet','num_addresses']) if len(cluster_info) > 0 else pd.DataFrame()\n",
+    "    # print(cluster_wallets.info())\n",
+    "    # print(cluster_wallets.head(5))\n",
+    "    # print(\"------------------------------------\\n\")\n",
     "    # print(f\"Number of clusters found: {len(cluster_wallets)}\")\n",
     "    # print(cluster_wallets.head(20))\n",
     "    return cluster_wallets\n"
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "fcce1df4",
    "metadata": {},
    "outputs": [
@@ -1128,26 +1128,65 @@
       "Wallet hash trovato per 1YLDrxWK9PmcSSda2hABEb1qUx9KuSJod: 02459cc1b4\n",
       "Wallet hash trovato per 1YLDrxWK9PmcSSda2hABEb1qUx9KuSJod: 02459cc1b4\n",
       "Skipping txId 10528066 due to no valid addresses.\n",
+      "Clusters\n",
+      "        txId      wallet  num_addresses\n",
+      "0  10527959  02459cc1b4              1\n",
+      "1  10527997  0862d3389d              1\n",
+      "2  10528045  02459cc1b4              1\n",
       "Skipping txId 10531167 due to no valid addresses.\n",
       "Skipping txId 10531177 due to no valid addresses.\n",
+      "Clusters\n",
+      " Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
       "Wallet hash trovato per 1F1F5afhPtStceqfgdmYXErry8yXpuEazw: 24136bfc00\n",
       "Wallet hash trovato per 1F1F5afhPtStceqfgdmYXErry8yXpuEazw: 24136bfc00\n",
       "Wallet hash trovato per 1F1F5afhPtStceqfgdmYXErry8yXpuEazw: 24136bfc00\n",
-      "Errore durante lo scraping per 1F1F5afhPtStceqfgdmYXErry8yXpuEazw: 429 Client Error: Too Many Requests for url: https://www.walletexplorer.com/wallet/24136bfc001fba13?from_address=1F1F5afhPtStceqfgdmYXErry8yXpuEazw\n",
-      "Cluster skipped for txId 10531495 due to different wallet hashes.\n",
+      "Wallet hash trovato per 1F1F5afhPtStceqfgdmYXErry8yXpuEazw: 24136bfc00\n",
+      "Clusters\n",
+      "        txId      wallet  num_addresses\n",
+      "0  10531494  24136bfc00              1\n",
+      "1  10531495  24136bfc00              1\n",
       "Skipping txId 10535847 due to no valid addresses.\n",
+      "Clusters\n",
+      " Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
       "Wallet hash trovato per 1CfuyNkSeXnAvr9Ywo1zyQwMWajwfuCSG9: 2855540b2a\n",
       "Wallet hash trovato per 1CfuyNkSeXnAvr9Ywo1zyQwMWajwfuCSG9: 2855540b2a\n",
+      "Clusters\n",
+      "        txId      wallet  num_addresses\n",
+      "0  10538793  2855540b2a              1\n",
       "Skipping txId 10542702 due to no valid addresses.\n",
+      "Clusters\n",
+      " Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
       "Skipping txId 10564640 due to no valid addresses.\n",
+      "Clusters\n",
+      " Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
       "Skipping txId 10565380 due to no valid addresses.\n",
       "Skipping txId 10565382 due to no valid addresses.\n",
       "Skipping txId 10565387 due to no valid addresses.\n",
       "Skipping txId 10565389 due to no valid addresses.\n",
+      "Clusters\n",
+      " Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
       "Skipping txId 10569508 due to no valid addresses.\n",
-      "Empty DataFrame\n",
-      "Columns: [txId, wallet, num_addresses, blockId]\n",
-      "Index: []\n"
+      "Clusters\n",
+      " Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "       txId      wallet  num_addresses  blockId\n",
+      "0  10527959  02459cc1b4              1   214336\n",
+      "1  10527997  0862d3389d              1   214336\n",
+      "2  10528045  02459cc1b4              1   214336\n",
+      "3  10531494  24136bfc00              1   214357\n",
+      "4  10531495  24136bfc00              1   214357\n",
+      "5  10538793  2855540b2a              1   214388\n"
      ]
     }
    ],
@@ -1170,7 +1209,7 @@
     "# print(groups.head(5))\n",
     "\n",
     "# Esempio di utilizzo\n",
-    "all_clusters = pd.DataFrame(columns=['blockId', 'txId', 'wallet','num_addresses'])\n",
+    "frames = []\n",
     "\n",
     "for block_id, group in groups:\n",
     "    tx_ids = group['txId']\n",
@@ -1180,49 +1219,17 @@
     "        group_info=group,\n",
     "        diceoncrack_wallet_ids=diceoncrack_mapped_addresses\n",
     "    )\n",
-    "    # Add cluster information to the DataFrame\n",
-    "    clusters['blockId'] = block_id\n",
-    "    all_clusters = pd.concat([clusters], ignore_index=True, axis=0)\n",
+    "    print(\"Clusters\\n\", clusters.head(5))\n",
+    "\n",
+    "    if len(clusters) > 0:\n",
+    "        clusters['blockId'] = block_id\n",
+    "        frames.append(clusters)\n",
     "\n",
     "# all_clusters['blockId'] = groups['blockId']\n",
     "\n",
-    "print(all_clusters.head(20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "f6252705",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nessun cluster disponibile per il calcolo.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calcola la dimensione media dei cluster per ogni blocco, considerando solo cluster con almeno 2 indirizzi\n",
-    "if not all_clusters.empty:\n",
-    "    # Filtra solo i cluster con almeno 2 indirizzi\n",
-    "    filtered_clusters = all_clusters[all_clusters['num_addresses'] >= 2]\n",
-    "    # Calcola la dimensione media per blocco\n",
-    "    avg_cluster_size_per_block = filtered_clusters.groupby('blockId')['num_addresses'].mean()\n",
-    "    # Visualizza il risultato\n",
-    "    print(\"Dimensione media dei cluster (>=2) per blocco:\")\n",
-    "    print(avg_cluster_size_per_block)\n",
-    "    # Grafico\n",
-    "    plt.figure(figsize=(12, 6))\n",
-    "    avg_cluster_size_per_block.plot(kind='bar')\n",
-    "    plt.title('Dimensione media dei cluster (>=2) per blocco')\n",
-    "    plt.xlabel('blockId')\n",
-    "    plt.ylabel('Dimensione media cluster')\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "else:\n",
-    "    print(\"Nessun cluster disponibile per il calcolo.\")"
+    "all_clusters = pd.concat(frames, ignore_index=True, axis=0) if frames else pd.DataFrame()\n",
+    "\n",
+    "print(all_clusters.head(50))"
    ]
   }
  ],
