Optimized address mapping and code cleaning

--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -246,6 +246,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "edee1ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load datasets\n",
+    "transactions = pd.read_csv('transactions.csv', engine='pyarrow')\n",
+    "transactions.columns = ['timestamp', 'blockId', 'txId', 'isCoinbase', 'fee']\n",
+    "\n",
+    "outputs = pd.read_csv('outputs.csv', engine='pyarrow')\n",
+    "outputs.columns = ['txId', 'position', 'addressId', 'amount', 'scripttype']\n",
+    "\n",
+    "inputs = pd.read_csv('inputs.csv', engine='pyarrow')\n",
+    "inputs.columns = ['txId', 'prevTxId', 'prevTxpos']\n",
+    "\n",
+    "mapping = pd.read_csv('mapping.csv', engine='pyarrow', header=None)\n",
+    "mapping.columns = ['hash', 'addressId']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bcbe0786",
    "metadata": {},
@@ -262,38 +283,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b9547807",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "db954734",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def map_wallet_addresses(wallet_addresses, mapping_df):\n",
+    "# Create a function to map address\n",
+    "def map_wallet_addresses(wallet_addresses,mapping_dt):\n",
     "    \"\"\"\n",
     "    Mappa una lista di wallet addresses ai rispettivi addressId nel dataset di mapping.\n",
     "    Restituisce un set di addressId trovati e stampa eventuali indirizzi non trovati.\n",
     "    \"\"\"\n",
-    "    mapped_addresses = set()\n",
-    "    for address in wallet_addresses:\n",
-    "        row = mapping_df[mapping_df['hash'] == address]\n",
-    "        if not row.empty:\n",
-    "            mapped_addresses.add(row['addressId'].values[0])\n",
-    "        else:\n",
-    "            print(f\"No mapping found for address: {address}\")\n",
+    "    mapped_addresses = mapping_dt.merge(wallet_addresses,on ='hash')['addressId']\n",
+    "    if mapped_addresses.empty:\n",
+    "        print(\"No addresses were mapped.\")\n",
+    "        return pd.Series([], name='addressId')\n",
+    "    \n",
     "    print(f\"Mapped addresses : {mapped_addresses}\")\n",
-    "    return mapped_addresses"
+    "    return mapped_addresses "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "724bd3fc",
    "metadata": {},
    "outputs": [
@@ -301,22 +314,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mapped addresses : {np.int64(2536929), np.int64(2537090)}\n"
+      "Mapped addresses : 0    2536929\n",
+      "1    2537090\n",
+      "Name: addressId, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "#1) Identify the mapping between wallet addresses on the dataset\n",
-    "mapping = pd.read_csv('mapping.csv', engine='pyarrow', header=None)\n",
-    "mapping.columns = ['hash', 'addressId']\n",
-    "\n",
     "if mapping is None:\n",
     "    print(\"Failed to retrieve the mapping dataset.\")\n",
     "    exit(1)\n",
     "\n",
-    "deepbit_wallet_addresses = [\"1VayNert3x1KzbpzMGt2qdqrAThiRovi8\",\"13NGmRF2SVRg3aKdGNVhXLmhA1JT9p87a8\"]\n",
+    "# deepbit_wallet_addresses = [\"1VayNert3x1KzbpzMGt2qdqrAThiRovi8\",\"13NGmRF2SVRg3aKdGNVhXLmhA1JT9p87a8\"]\n",
     "\n",
-    "deepbit_mapped_addresses = map_wallet_addresses(deepbit_wallet_addresses, mapping)\n"
+    "deepbit_mapped_addresses = map_wallet_addresses(deepbit_wallet_addresses,mapping)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce510acc",
+   "metadata": {},
+   "source": [
+    "### 1) Find the transaction of DeepBit.net which are the transactions that have at least one input or output address of DeepBit.net\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c266d333",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of transactions related to DiceOnCrack.com: 16702\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_wallet_transactions(wallet_mapped_addresses, transactions, inputs, outputs):\n",
+    "    \"\"\"Finds all transactions related to the specified service addresses.\"\"\"\n",
+    "\n",
+    "    # Find all outputs information (address, amount, ...)\n",
+    "    diceoncrack_output_transactions = outputs.merge(wallet_mapped_addresses,on='addressId') \n",
+    "    \n",
+    "    # Find all inputs information (address, amount, ...)\n",
+    "    renamed_outputs= diceoncrack_output_transactions.rename(columns={'txId': 'prevTxId', 'position': 'prevTxpos'})\n",
+    "\n",
+    "    wallet_input_transactions = inputs.merge(renamed_outputs,on=['prevTxId', 'prevTxpos'])\n",
+    "\n",
+    "    # Find all transactions that have at least one output address of DiceOnCrack.com\n",
+    "    df_union = pd.concat([diceoncrack_output_transactions['txId'], wallet_input_transactions['txId']], axis=0,ignore_index=True).drop_duplicates().reset_index(drop=True)\n",
+    "    diceoncrack_transactions = transactions.merge(df_union,on='txId') \n",
+    "\n",
+    "    # Order by blockId in ascending order\n",
+    "    diceoncrack_transactions = diceoncrack_transactions.sort_values(by='blockId', ascending=True)\n",
+    "    return diceoncrack_transactions\n",
+    "\n",
+    "\n",
+    "# Find the transactions related to DiceOnCrack.com\n",
+    "deepbit_transactions = find_wallet_transactions(deepbit_mapped_addresses, transactions, inputs, outputs)\n",
+    "print(f\"Number of transactions related to Deepbit.net: {len(deepbit_transactions)}\")\n",
+    "\n",
+    "# DEBUG\n",
+    "# print(diceoncrack_transactions.head(20))\n",
+    "# print(diceoncrack_transactions.describe())\n"
    ]
   },
   {
@@ -493,16 +557,6 @@
    ],
    "source": [
     "#2) Find the transaction patterns for the wallet addresses\n",
-    "\n",
-    "# Load datasets\n",
-    "transactions = pd.read_csv('transactions.csv', engine='pyarrow')\n",
-    "transactions.columns = ['timestamp', 'blockId', 'txId', 'isCoinbase', 'fee']\n",
-    "\n",
-    "outputs = pd.read_csv('outputs.csv', engine='pyarrow')\n",
-    "outputs.columns = ['txId', 'position', 'addressId', 'amount', 'scripttype']\n",
-    "\n",
-    "inputs = pd.read_csv('inputs.csv', engine='pyarrow')\n",
-    "inputs.columns = ['txId', 'prevTxId', 'prevTxpos']\n",
     "\n",
     "# 1. Identify Deepbit addresses (assuming deepbit_mapped_addresses is predefined)\n",
     "# deepbit_mapped_addresses = [...] \n",
@@ -861,8 +915,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No mapping found for address: 1PipeZofhJv1hxsxCadEeG1vHAK87f23LE\n",
-      "Mapped addresses : {np.int64(7452038), np.int64(7863955), np.int64(7277718), np.int64(7658647), np.int64(7395737), np.int64(7449241), np.int64(7554463), np.int64(7143209), np.int64(7094576), np.int64(7143858), np.int64(7397684), np.int64(7561142), np.int64(7237303), np.int64(7268027), np.int64(7419836), np.int64(7769789), np.int64(7188163), np.int64(7766729), np.int64(7322707), np.int64(7399899), np.int64(7191517), np.int64(7096042), np.int64(7322228), np.int64(7203829), np.int64(7399924), np.int64(7399927), np.int64(7111675)}\n"
+      "Mapped addresses : 0     7094576\n",
+      "1     7096042\n",
+      "2     7111675\n",
+      "3     7143209\n",
+      "4     7143858\n",
+      "5     7188163\n",
+      "6     7191517\n",
+      "7     7203829\n",
+      "8     7237303\n",
+      "9     7268027\n",
+      "10    7277718\n",
+      "11    7322228\n",
+      "12    7322707\n",
+      "13    7395737\n",
+      "14    7397684\n",
+      "15    7399899\n",
+      "16    7399924\n",
+      "17    7399927\n",
+      "18    7419836\n",
+      "19    7449241\n",
+      "20    7452038\n",
+      "21    7554463\n",
+      "22    7561142\n",
+      "23    7658647\n",
+      "24    7766729\n",
+      "25    7769789\n",
+      "26    7863955\n",
+      "Name: addressId, dtype: int64\n"
      ]
     }
    ],
@@ -929,36 +1009,8 @@
     }
    ],
    "source": [
-    "def find_diceoncrack_transactions(diceoncrack_mapped_addresses, transactions, inputs, outputs):\n",
-    "    \"\"\"Finds all transactions related to DiceOnCrack.com addresses.\"\"\"\n",
-    "    # Find all outputs that are related to DiceOnCrack addresses\n",
-    "    diceoncrack_output_transactions = outputs[outputs['addressId'].isin(diceoncrack_mapped_addresses)]\n",
-    "\n",
-    "    # Find all inputs information (address, amount, ...)\n",
-    "    renamed_outputs= outputs.rename(columns={'txId': 'prevTxId', 'position': 'prevTxpos'})\n",
-    "\n",
-    "    inputs_info = inputs.merge(renamed_outputs,on=['prevTxId', 'prevTxpos'])\n",
-    "\n",
-    "    # Find all inputs that are related to DiceOnCrack addresses\n",
-    "    diceoncrack_inputs_transactions = inputs_info[inputs_info['addressId'].isin(diceoncrack_mapped_addresses)]\n",
-    "\n",
-    "    # DEBUG\n",
-    "    # print(diceoncrack_output_transactions.head(5))\n",
-    "    # print(\"---\")\n",
-    "    # print(diceoncrack_inputs_transactions.head(5))\n",
-    "\n",
-    "\n",
-    "    # Find all transactions that have at least one output address of DiceOnCrack.com\n",
-    "    df_union = pd.concat([diceoncrack_output_transactions['txId'], diceoncrack_inputs_transactions['txId']],axis=0, ignore_index=True).drop_duplicates()\n",
-    "\n",
-    "    diceoncrack_transactions = transactions[transactions['txId'].isin(df_union)].drop_duplicates()\n",
-    "\n",
-    "    # Order by blockId in ascending order\n",
-    "    diceoncrack_transactions = diceoncrack_transactions.sort_values(by='blockId', ascending=True)\n",
-    "    return diceoncrack_transactions\n",
-    "\n",
     "# Find the transactions related to DiceOnCrack.com\n",
-    "diceoncrack_transactions = find_diceoncrack_transactions(diceoncrack_mapped_addresses, transactions, inputs, outputs)\n",
+    "diceoncrack_transactions = find_wallet_transactions(diceoncrack_mapped_addresses, transactions, inputs, outputs)\n",
     "print(f\"Number of transactions related to DiceOnCrack.com: {len(diceoncrack_transactions)}\")\n",
     "# DEBUG\n",
     "# print(diceoncrack_transactions.head(20))\n",
@@ -1000,9 +1052,8 @@
     "import time\n",
     "import pandas as pd\n",
     "\n",
-    "# Cache globale per memorizzare address -> wallet\n",
-    "address_to_wallet_cache = {}\n",
-    "REQUEST_INTERVAL = 4  # secondi tra le richieste\n",
+    "\n",
+    "REQUEST_INTERVAL = 10  # secondi tra le richieste\n",
     "\n",
     "def get_wallet_hash(address):\n",
     "    \"\"\"Effettua scraping su Wallet Explorer per ottenere l'hash del wallet dato un address\"\"\"\n",
@@ -1014,7 +1065,7 @@
     "    try:\n",
     "        time.sleep(REQUEST_INTERVAL)  # Attendi tra le richieste per evitare blocchi\n",
     "        \n",
-    "        response = requests.get(url, headers=headers, timeout=10)\n",
+    "        response = requests.get(url, headers=headers, timeout=50)\n",
     "        response.raise_for_status()\n",
     "        soup = BeautifulSoup(response.text, 'html.parser')\n",
     "        \n",
@@ -1035,18 +1086,15 @@
     "                    # Rimuovi le parentesi quadre\n",
     "                    wallet_hash = wallet_hash[1:-1]\n",
     "                # cache e rate‑limit\n",
-    "                print(f\"Wallet hash trovato per {address}: {wallet_hash}\")\n",
-    "                address_to_wallet_cache[address] = wallet_hash\n",
+    "                # print(f\"Wallet hash trovato per {address}: {wallet_hash}\")\n",
     "                # get_wallet_hash.last_request_time = current_time\n",
     "                return wallet_hash\n",
     "        \n",
     "        # Se non trovato\n",
-    "        address_to_wallet_cache[address] = None\n",
     "        return None\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"Errore durante lo scraping per {address}: {str(e)}\")\n",
-    "        address_to_wallet_cache[address] = None\n",
     "        return None\n",
     "    # finally:\n",
     "        # get_wallet_hash.last_request_time = time.time()\n",
