Implemented timestamp and amount difference for transaction chain + plot

--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -727,6 +727,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "accf3f7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txId_chain = pd.Series(list(deepbit_graph.nodes()), name='txId')\n",
+    "\n",
+    "payment_info = transactions[['timestamp', 'txId']].merge(txId_chain, on='txId').reset_index()\n",
+    "\n",
+    "# Calcola le differenze tra timestamp consecutivi\n",
+    "diff_timestamp = pd.Series(payment_info['timestamp'].diff().shift(-1), name='timestamp_diff')\n",
+    "\n",
+    "# Calcola le differenze tra gli amount consecutivi sui change address\n",
+    "amount_info = outputs.merge(payment_info, on='txId')\n",
+    "amount_diff = pd.Series(amount_info['amount'].diff().shift(-1).abs()/ 1e8, name='amount_diff')\n",
+    "\n",
+    "fig, axs = plt.subplots(1, 2, figsize=(16, 6))\n",
+    "fig.suptitle('Differenze tra timestamp e amount sui change address nella catena DeepBit.net', fontsize=16)\n",
+    "\n",
+    "# Primo subplot: differenza timestamp\n",
+    "axs[0].plot(diff_timestamp.index, diff_timestamp, color='tab:blue', marker='o')\n",
+    "axs[0].set_title('Differenza timestamp tra transazioni consecutive')\n",
+    "axs[0].set_xlabel('Indice nella catena')\n",
+    "axs[0].set_ylabel('Differenza timestamp (s)')\n",
+    "axs[0].grid(True, alpha=0.3)\n",
+    "\n",
+    "# Secondo subplot: differenza amount\n",
+    "axs[1].plot(amount_diff.index, amount_diff, color='tab:orange', marker='x')\n",
+    "axs[1].set_title('Differenza amount tra transazioni consecutive')\n",
+    "axs[1].set_xlabel('Indice nella catena')\n",
+    "axs[1].set_ylabel('Differenza amount (satoshi)')\n",
+    "axs[1].grid(True, alpha=0.3)\n",
+    "# axs[1].ticklabel_format(style='plain', axis='y')  # Disabilita la notazione scientifica sull'asse y\n",
+    "\n",
+    "plt.tight_layout(rect=[0, 0, 1, 0.95])\n",
+    "plt.show()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "3d24b603",
    "metadata": {},
