Added anonymized OtherDeepbit's wallet detection

--- a/Progetto_Birindelli.ipynb
+++ b/Progetto_Birindelli.ipynb
@@ -768,6 +768,79 @@
   },
   {
    "cell_type": "markdown",
+   "id": "10ecab57",
+   "metadata": {},
+   "source": [
+    "# 3)\n",
+    "considerare gli indirizzi in OthersDeepbit, e verificare, effettuando scraping su WalletExplorer, se corrispondono a entità deanonimizzate;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb5a21d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "REQUEST_INTERVAL = 6  # secondi tra le richieste\n",
+    "\n",
+    "def is_deanonymized(address):\n",
+    "    \"\"\"Effettua scraping su Wallet Explorer per ottenere l'hash del wallet dato un address\"\"\"\n",
+    "\n",
+    "    \n",
+    "    url = f\"https://www.walletexplorer.com/?q={address}\"\n",
+    "    headers = {'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.3'}\n",
+    "    \n",
+    "    try:\n",
+    "        time.sleep(REQUEST_INTERVAL)  # Attendi tra le richieste per evitare blocchi\n",
+    "        \n",
+    "        response = requests.get(url, headers=headers, timeout=50)\n",
+    "        response.raise_for_status()\n",
+    "        soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "        \n",
+    "        # Tentativo 1: Cerca nel div header\n",
+    "        main_div = soup.find('div',id='main')\n",
+    "        h2_tag = main_div.find('h2') if main_div else None\n",
+    "        \n",
+    "        if h2_tag:\n",
+    "            # Prendi il testo completo\n",
+    "            full = h2_tag.get_text(separator=' ').strip()\n",
+    "            # Estrai tutte le sottostringhe fra virgolette doppie\n",
+    "            quoted = full.split(' ')\n",
+    "            # Pulisci gli elementi e verifica che ci sia almeno un secondo elemento\n",
+    "            cleaned = [s.strip() for s in quoted]\n",
+    "            if len(cleaned) >= 2:\n",
+    "                wallet_hash = cleaned[2]\n",
+    "                if wallet_hash[0] != '[' and wallet_hash[-1] != ']':\n",
+    "                    # Rimuovi le parentesi quadre\n",
+    "                    return False\n",
+    "\n",
+    "                return True\n",
+    "        \n",
+    "        # Se non trovato\n",
+    "        return None\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Errore durante lo scraping per {address}: {str(e)}\")\n",
+    "        return None\n",
+    "    \n",
+    "\n",
+    "otheraddresses_mapped = mapping.merge(pd.Series(list(OthersDeepbit), name='addressId'), on='addressId')['hash']\n",
+    "\n",
+    "\n",
+    "deanonymized_addresses = set()\n",
+    "for address in otheraddresses_mapped:\n",
+    "    res = is_deanonymized(address)\n",
+    "    if res is not None and res:\n",
+    "        deanonymized_addresses.add(address)\n",
+    "        print(f\"Address {address} is deanonymized.\")\n",
+    "\n",
+    "print(f\"Total deanonymized addresses: {len(deanonymized_addresses)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3d24b603",
    "metadata": {},
    "source": [
